# ai-career-copilot

./: .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  main.py  ornek_cv.txt  ornek_ilan.txt  pyproject.toml  streamlit_app.py  tools.py
.streamlit/: config.toml
core/: __init__.py  agent.py  chain.py  skills.py  tools.py
docs/: business_analysis.md  product_perspective.md  technical_architecture.md
