[project]
name = "ai-career-copilot"
version = "0.3.0"
description = "CV ile iş ilanı arasındaki beceri uyumunu analiz eden AI asistanı. LangChain + Ollama + Streamlit ile tamamen yerel çalışır."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "streamlit>=1.40.0",
]
